# Espresso

./: .gitmodules  Makefile  go.mod  go.sum
.github/workflows/: ci.yml  espresso-docker.yml  espresso-e2e.yml
arb-vid/: Makefile  arb_vid.go  main  main.go
arb-vid/lib/: libmylib.d  libvid.d  libvid.dylib  vid.h
arb-vid/lib/vid/: Cargo.toml
arb-vid/lib/vid/src/: lib.rs
arbcompress/: compress_cgo.go  compress_common.go  compress_wasm.go  raw.s
arbitrator/jit/: Cargo.toml
arbitrator/jit/src/: arbcompress.rs  arbvid.rs  machine.rs
arbitrator/prover/: Cargo.toml
arbitrator/wasm-libraries/vid/: Cargo.toml
arbitrator/wasm-libraries/vid/src/: lib.rs
arbnode/: node.go
arbos/: parse_l2.go
arbos/espresso/: types.go
arbvid/: arbvid_cgo.go  arbvid_common.go  arbvid_wasm.go
cmd/nitro/: nitro.go
cmd/replay/: main.go
espresso/: client.go
execution/gethexec/: executionengine.go  node.go  sequencer.go
staker/: block_validator.go
system_tests/: common_test.go  espresso_e2e_test.go  espresso_osp_test.go  espresso_test.go
system_tests/espresso-e2e/: .env  docker-compose.yaml
