# Cargo.toml
[package]
name = "vid"
version = "0.1.0"

[dependencies]
libc = "0.1"
jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish", features = [
    "test-srs",
] }
jf-utils = { git = "https://github.com/EspressoSystems/jellyfish", features = [
] }
ark-bls12-381 = "0.4.0"
sha2 = { version = "0.10.1", default-features = false }

[lib]
name = "vid"
crate_type = ["cdylib", "lib"]
