[package]
name = "vid"
version = "0.1.0"
edition = "2021"

[dependencies]
go-abi = { path = "../go-abi" }
jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish", features = [
    "test-srs",
] }
# jf-utils = { git = "https://github.com/EspressoSystems/jellyfish", features = [
# ] }
# jf-primitives = { path = "../../../../jellyfish/primitives", features = [
#     "test-srs",
# ] }
#jf-utils = { path = "../../../../jellyfish", features = [] }

ark-bls12-381 = "0.4.0"
sha2 = { version = "0.10.1", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
ark-serialize = { version = "0.4", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]
